--- a/src/components/game/game.module.scss
+++ b/src/components/game/game.module.scss
@@ -50,6 +50,7 @@
     overflow: scroll;
   }
 }
+
 .CurrentLevel {
   text-align: center;
   width: 50%;
@@ -66,7 +67,12 @@
 }
 
 .BoardWrapper {
-  width: 55%;
+  width: 50%;
+}
+
+.PlayerStatisticsWrapper {
+  height: fit-content;
+  transform: translateY(5vh) translateX(-2.5vw);
 }
 .SideBar {
   transform: translateY(-10vh);
@@ -81,10 +87,11 @@
   transition: all 0.4s ease-in-out;
 
   &:hover {
-    width: 25%;
+    width: 20%;
     z-index: 5;
   }
 }
+
 .MultiplayerGames {
   position: relative;
   z-index: 1;
@@ -99,7 +106,7 @@
   height: 80vh;
   transition: all 0.4s ease-in-out;
   &:hover {
-    width: 25%;
+    width: 20%;
     z-index: 5;
   }
 }
