--- a/src/components/result/result.module.scss
+++ b/src/components/result/result.module.scss
@@ -1,6 +1,7 @@
 .ResultWrapper {
+  position: fixed;
   width: 100vw;
-  height: 80vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   vertical-align: middle;
@@ -23,7 +24,7 @@
   backdrop-filter: blur(3.2px);
   -webkit-backdrop-filter: blur(3.2px);
   border: 1px solid rgba(255, 255, 255, 0.25);
-  padding: 3vw;
+  padding: 2vw;
   color: #fff;
 }
 
@@ -32,7 +33,7 @@
   flex-direction: row;
   justify-content: space-between;
   height: 100%;
-  padding: 2vw;
+  padding: 1vw;
 }
 
 .Column {
@@ -41,28 +42,28 @@
   justify-content: space-evenly;
   align-items: center;
   vertical-align: middle;
-  height: 12vh;
-  width: 12vw;
+  height: 10vh;
+  width: 10vw;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
   border: 1px solid rgba(255, 255, 255, 0.25);
-  margin: 1vw;
+  margin: 0vw 1vw;
 }
 .ColumnTitle {
-  font-size: 1.75vw;
+  font-size: 1.5vw;
 }
 .ColumnValue {
-  font-size: 2vw;
+  font-size: 1.5vw;
 }
 .ButtonWrapper {
   text-align: center;
 }
 .FinishButton {
-  margin: 2vw 0vw;
-  padding: 1vw 4vw;
+  margin: 1vw 0vw;
+  padding: 1vw 2vw;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
@@ -72,6 +73,6 @@
   border-radius: 5px;
   cursor: pointer;
   color: #fff;
-  font-size: 2vw;
+  font-size: 1.5vw;
   font-family: Jaro;
 }
